    \itemize{
      \item .
    }
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item [None yet.]
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The minimum \command{autoconf} requirement for a maintainer
      build has been increased to \command{autoconf}\sspace{}2.72.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{is.R()} is defunct. [Soon \dots.]
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item .
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item .
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item .
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item Startup banners, \command{R --version}, \code{sessionInfo()}
      and \command{R CMD check} no longer report \code{(64-bit)} as part of
      the platform as this is almost universal -- the increasingly rare
      32-bit platforms will still report \code{(32-bit)}.

      On Windows, ditto for window titles.

      \item \code{is.atomic(NULL)} now returns \code{FALSE}, as \code{NULL}
      is not an atomic vector.  Strict back-compatibility would
      replace \code{is.atomic(foo)} by \code{(is.null(foo) || is.atomic(foo))}
      but should happen only sparingly.
    }
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{confint()} methods for \code{"glm"} and
      \code{"nls"} objects have been copied to the \pkg{stats}
      package.  Previously, they were stubs which called versions in
      package \pkg{MASS}. The \pkg{MASS} namespace is no longer loaded
      if you invoke (say) \code{confint(glmfit)}.  Further, the
      \code{"glm"} method for \code{profile()} and the \code{plot()}
      and \code{pairs()} methods for class \code{"profile"} have been
      copied from \pkg{MASS} to \pkg{stats}.  (\code{profile.nls()} and